--- a/index.html
+++ b/index.html
@@ -126,7 +126,16 @@
         <p>© 2024 Grupo CEUB</p>
     </div>
   </footer>
+<script>
+  document.addEventListener('DOMContentLoaded', function() {
+    const menuToggle = document.querySelector('.menu-toggle');
+    const menu = document.querySelector('.menu');
 
+    menuToggle.addEventListener('click', function() {
+      menu.classList.toggle('active');
+    });
+  });
+</script>
 
 </body>
 </html>
